gitops/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: foo
 namespace: prod
spec:
 replicas: 2
 selector:
   matchLabels:
     app: foo
 template:
   metadata:
    labels:
      app: foo
   spec:
     containers:
     - name: c1
       image: vvang/dummy:x86
       livenessProbe:
         initialDelaySeconds: 10
         periodSeconds: 3
         httpGet:
           path: /
           port: 8080
       readinessProbe:
         initialDelaySeconds: 10
         periodSeconds: 3
         httpGet:
           path: /
           port: 8080
